overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,9 @@ button{
     box-shadow: none;
     cursor: pointer;
 }
+section{
+    overflow: hidden;
+}
 img {
     max-width: 100%
 }
